[gd_scene load_steps=16 format=3 uid="uid://5m0c4rhkrs8k"]

[ext_resource type="Texture2D" uid="uid://cdwimxjfbnfx5" path="res://assets/sprites/enemies/shooter/projectile0.png" id="1_e2sq5"]
[ext_resource type="Script" uid="uid://cjhgfkgiql64p" path="res://assets/scripts/enemies/projectiles/enemy_projectile.gd" id="1_jw3qg"]
[ext_resource type="Script" uid="uid://b6edpkqidu6u4" path="res://assets/scripts/enemies/hitbox.gd" id="3_vklgp"]

[sub_resource type="Curve" id="Curve_rirfm"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.79792744, 0.42627883), -2.922444, -2.922444, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_t5ls1"]
curve = SubResource("Curve_rirfm")

[sub_resource type="Curve" id="Curve_jw3qg"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.97409326, 0.66750246), 0.0, 0.0, 0, 0, Vector2(0.99999, 0.48495483), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_rirfm"]
curve = SubResource("Curve_jw3qg")

[sub_resource type="Curve" id="Curve_e2sq5"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.5045135), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_jw3qg"]
curve = SubResource("Curve_e2sq5")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_e2sq5"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 10.23
inherit_velocity_ratio = -0.5
spread = 10.0
initial_velocity_max = 51.89
gravity = Vector3(0, 0, 0)
scale_min = 9.08
scale_max = 9.08
scale_curve = SubResource("CurveTexture_jw3qg")
color = Color(0.8980392, 0.17254902, 0.29803923, 1)
alpha_curve = SubResource("CurveTexture_t5ls1")
emission_curve = SubResource("CurveTexture_rirfm")

[sub_resource type="Animation" id="Animation_jw3qg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_e2sq5"]
resource_name = "default"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rirfm"]
_data = {
&"RESET": SubResource("Animation_jw3qg"),
&"default": SubResource("Animation_e2sq5")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jw3qg"]
radius = 11.0
height = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vklgp"]
radius = 19.0

[node name="enemyProjectile" type="Node2D" node_paths=PackedStringArray("particles")]
top_level = true
z_index = 1
rotation = -1.5707964
script = ExtResource("1_jw3qg")
speed = 450.0
particles = NodePath("Sprite2D/GPUParticles2D")

[node name="time_til_deletion" type="Timer" parent="."]
wait_time = 1.5

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 5
rotation = 1.5707964
texture = ExtResource("1_e2sq5")
hframes = 2

[node name="GPUParticles2D" type="GPUParticles2D" parent="Sprite2D"]
show_behind_parent = true
position = Vector2(8.742268e-08, 0)
rotation = -1.5707964
scale = Vector2(0.48000127, 1.3999999)
amount = 10
lifetime = 0.2
explosiveness = 0.1
process_material = SubResource("ParticleProcessMaterial_e2sq5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_rirfm")
}
autoplay = "default"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(6.000001, 2.6226834e-07)
scale = Vector2(2.4178257, -1.7069411)

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0
script = ExtResource("3_vklgp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-4, -1.7484555e-07)
shape = SubResource("CapsuleShape2D_jw3qg")

[node name="delete_zone" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="delete_zone"]
shape = SubResource("CircleShape2D_vklgp")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="delete_zone" to="." method="_on_delete_zone_area_entered"]
